<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="114dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="60dp"
            android:src="@drawable/morent2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/tag"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_fullname"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/your_name"
                android:textColor="@color/textColor2"
                android:textColorHint="@color/textColor4"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_email"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:textColor="@color/textColor2"
                android:padding="15dp"
                android:textColorHint="@color/textColor4"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_password"
            android:layout_height="60dp"
            app:hintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textColor4"
                android:hint="@string/password"
                android:textColor="@color/textColor2"
                android:padding="15dp"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_retype"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_retype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/re_type_password"
                android:textColor="@color/textColor2"
                android:textColorHint="@color/textColor4"
                android:padding="15dp"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/already_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/textColor"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/swipe_right_for_login"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>