...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

...
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/login"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/have_acc"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textColor="@color/textColor"
...
