...
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="login_title">Login</string>
    <string name="tag">Ayo bergabung dengan kami dan \ndapatkan penawaran menarik!</string>
    <string name="swipe_right_for_login">I\'m already a member</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">9715_Yohanes Yobel</string>
...
